# research-module-schueco

./: .gitignore  AGENTS.md  README.md  REVIEW-PROJEKTBERICHT.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_portfolio_history.py  0002_run_events.py  0003_smart_review.py  0004_new_trends_pending.py  0005_bilingual_trends.py  0006_newsfeed_ordering.py  20260711_01_portfolio_history.py  20260711_02_run_events.py  20260713_01_smart_review.py  20260713_02_new_trends_pending.py  20260713_03_bilingual_trends.py
backend/app/: __init__.py  baseline.py  cli.py  config.py  db.py  demo_seed.py  evaluation.py  llm.py  main.py  models.py  pestel.py  portfolio.py  run_deletion.py  schemas.py
backend/app/api/: routes.py
backend/app/ingestion/: __init__.py  arxiv.py  base.py  firecrawl.py  geo.py  openalex.py  registry.py
backend/app/pipeline/: __init__.py  classify.py  corpus.py  deduplication.py  describe.py  embeddings.py  emergence.py  matching.py  mathutil.py  progress.py  retrieval.py  run.py  timeseries.py  topics.py  translate.py
backend/app/research/: __init__.py  crawler.py  expand.py  seeds.py  (+4 more)
backend/tests/: conftest.py  test_api.py  test_arxiv.py  test_base.py  test_classify.py  test_db.py  test_emergence.py  test_eval_snapshot.py  test_evaluation.py  test_firecrawl.py  test_history_pipeline.py  test_models.py  test_openalex.py  test_pipeline.py  test_portfolio_api.py  test_registry.py  test_research.py  test_retrieval.py  test_run.py  test_search_planning.py  test_service.py
(+58 files in other folders)
